# aiortnetlink

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
src/aiortnetlink/: __init__.py  __main__.py  address.py  cli.py  client.py  gennl.py  lazy.py  link.py  netlink.py  netns.py  notification.py  route.py  rtfile.py  rtm.py  rule.py  tun.py  tuntap.py
src/aiortnetlink/constants/: arphrdtype.py  ctrlattr.py  ctrlcmd.py  fratype.py  icmpv6routerpref.py  ifaflag.py  ifatype.py  ifflag.py  iflatype.py  iflinkmode.py  ifoper.py  miscconstants.py  nlfamily.py  nlflag.py  nlmsgtype.py  rtatype.py  rtcflag.py  rtmflag.py  rtmtype.py  rtnlfamily.py  rtnlgroup.py  rtntype.py  rtprot.py  rtscope.py  rttable.py  tuniffflag.py  tunioctl.py
src/aiortnetlink/structs/: ifa_cacheinfo.py
tests/: test_netlink.py
tools/: .gitattributes  .gitignore  gen_constants.c  gen_constants.py
