[project]
name = "aiortnetlink"
version = "0.1.0"
description = "Netlink client for asyncio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
test = [
  "pytest"
]
lint = [
  "ruff",
  "mypy",
]
fmt = [
  "ruff"
]

[tool.mypy]
strict = true

[tool.poe.tasks]
# TODO: Switch to uv's task system once its implemented
# See https://github.com/astral-sh/uv/issues/5903
ruff-fmt = "uv run --group fmt ruff format src tests"
ruff-fmt-check = "uv run --group fmt ruff format --check src tests"
fmt = ["ruff-fmt"]
ruff-check = "uv run --group lint ruff check src tests"
mypy = "uv run --group lint mypy src tests"
lint = ["mypy", "ruff-check"]
tests = "env PYTHONPATH=src uv run --group test pytest -v tests"
test = ["lint", "tests", "ruff-fmt-check"]
